# JETS

./: README.md  pyproject.toml
databases/joedb-2026-06/: DB_1_items.csv  DB_2a_assembly_names.csv  DB_2b_assembly_components.csv  UI_2_assemblies.json
defaults/: .jetsconfig
defaults/default_project/: annotation_styles.json  project_info.json
project_folder/example_project/: project.json
project_folder/example_project/drawings/uuid1/: drawing_info.json
project_folder/example_project/user_dwgs/uuid1/: drawing_annotations.json
scripts/: EXPORT-ASSYS.xlsx  MANUAL-EXPORT-FROM-ACCUBID.xlsx  assydb.json  import_assys.py  import_items.py
src/: a_constants.py  a_logging_utils.py  a_utils.py  main.py  z_main.py  z_sandbox.py
src/db/: database.py
src/db/defaults/: UI_1_item_database.json
src/db/defaults/example_project/: id.txt
src/models/: a_defaults.py  annotation.py  audit_trail.py  database.py  jets.py  project.py  z_model_hierarchy.py
src/ui/: aa_project_browser.py  ba_proj_tabular.py  drawing_list.py  home_screen.py  pdf_canvas.py  scale_dialog.py  theme.py  viewer_window.py  z_home_screen.py
